[gd_scene format=3 uid="uid://dwvueefmci38n"]

[ext_resource type="Script" uid="uid://bvx7svcbxdahn" path="res://scenes/invtest/InventoryUIPanel.gd" id="1_auoyx"]
[ext_resource type="PackedScene" uid="uid://cjoqsbp6mwuto" path="res://scenes/invtest/SlotControl.tscn" id="2_bh5i4"]

[node name="InventoryUIPanel" type="Control" unique_id=1160566473]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_auoyx")
slot_scene = ExtResource("2_bh5i4")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=891401235]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -393.0
offset_top = -224.0
offset_right = -361.0
offset_bottom = -114.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label1" type="Label" parent="VBoxContainer" unique_id=838499444]
layout_mode = 2
text = "背包
"

[node name="BackpackGrid" type="GridContainer" parent="VBoxContainer" unique_id=1200515427]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer" unique_id=2139355418]
layout_mode = 2
text = "箱子
"

[node name="ChestGrid" type="GridContainer" parent="VBoxContainer" unique_id=647408946]
layout_mode = 2
